--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -148,15 +148,21 @@
   border: none;
   color: inherit;
   cursor: pointer;
-  padding: 2px 4px;
+  padding: 4px;
   line-height: 1;
-  font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color @transition-fast;
-  min-width: 20px;
-  min-height: 20px;
+  min-width: 24px;
+  min-height: 24px;
+
+  svg {
+    display: block;
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+  }
 
   &:hover {
     background-color: fade(@primary-foreground, 15%);
