--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -23,13 +23,20 @@
               [style.font-family]="getCellFontFamily(rowIndex,colIndex)"
               [style.text-decoration]="getCellTextDecoration(rowIndex,colIndex)"
             >
-              <div class="cell-content"
-                   [style.display]="'flex'"
-                   [style.flexDirection]="'column'"
-                   [style.justifyContent]="getCellVAlignFlex(rowIndex,colIndex)"
-                   [style.textAlign]="getCellHAlign(rowIndex,colIndex)"
-                   [style.overflow]="'auto'"
-                   [innerHTML]="getCellContent(rowIndex, colIndex)"></div>
+              @if (hasSubTable(rowIndex, colIndex)) {
+                <!-- Render sub-table -->
+                <div class="sub-table-container" 
+                     [innerHTML]="getSubTableHtml(rowIndex, colIndex)"></div>
+              } @else {
+                <!-- Normal cell content -->
+                <div class="cell-content"
+                     [style.display]="'flex'"
+                     [style.flexDirection]="'column'"
+                     [style.justifyContent]="getCellVAlignFlex(rowIndex,colIndex)"
+                     [style.textAlign]="getCellHAlign(rowIndex,colIndex)"
+                     [style.overflow]="'auto'"
+                     [innerHTML]="getCellContent(rowIndex, colIndex)"></div>
+              }
             </td>
           }
         </tr>
@@ -82,6 +89,15 @@
         <button class="cell-action" type="button" (click)="onEditCellContent()" title="Edit Cell Content">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11.5 1.5L14.5 4.5L5 14H2V11L11.5 1.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
+        <button class="cell-action" type="button" (click)="onSplitCellIntoSubTable()" title="Split Cell into Sub-Table">
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <!-- Outer cell border -->
+            <rect x="1" y="1" width="14" height="14" stroke="currentColor" stroke-width="1.5" rx="1"/>
+            <!-- Inner 2x2 grid -->
+            <line x1="8" y1="4" x2="8" y2="12" stroke="currentColor" stroke-width="1.2"/>
+            <line x1="4" y1="8" x2="12" y2="8" stroke="currentColor" stroke-width="1.2"/>
           </svg>
         </button>
         <button class="cell-action" type="button" (click)="onSplitRowsFromToolbar()" title="Split Rows">
