Fixed cog positioning on sub-cells

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -137,9 +137,9 @@
   }
 </div>
 
-@if (showCellEditor()) {
+@if (showCellEditor() && editorCellSelection()) {
   <app-cell-editor-dialog
-    [initialContent]="getCellContentRaw(designerState.selectedTableCell()!.row, designerState.selectedTableCell()!.col)"
+    [initialContent]="getCellContentRaw(editorCellSelection()!.row, editorCellSelection()!.col)"
     (saved)="onCellEditorSaved($event)"
     (closed)="onCellEditorClosed()"
   ></app-cell-editor-dialog>
