--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -45,11 +45,11 @@
       height: 100%;
       box-sizing: border-box;
       white-space: pre-wrap; // preserve whitespace & newlines
-      
+
       // Font properties are now inherited from <td> element
       // Quill-generated inline styles in content will override via higher specificity
     }
-    
+
     .sub-table-container {
       width: 100%;
       height: 100%;
@@ -57,18 +57,18 @@
       padding: 0;
       margin: 0;
     }
-    
+
     .sub-table {
       border-collapse: collapse;
-      
+
       .sub-table-cell {
         position: relative;
         cursor: pointer;
         transition: all @transition-fast;
-        
+
         // Background color is applied inline per level
         // Don't override it here
-        
+
         &:hover {
           // Darken slightly on hover
           filter: brightness(0.95);
@@ -145,10 +145,10 @@
   align-items: center;
   justify-content: center;
   box-shadow: @shadow-sm;
-  z-index: @z-popover;
+  z-index: @z-dialog;
   transform: translate(-50%, 0);
   transition: all @transition-fast;
-  
+
   &:hover {
     background-color: darken(@primary, 10%);
     transform: translate(-50%, 0) scale(1.1);
