Save / load report design is implemented

--- a/fe-designer-dragdrop/src/app/app.html
+++ b/fe-designer-dragdrop/src/app/app.html
@@ -5,6 +5,8 @@
     <app-menu-bar
       (onNew)="onNewLayout()"
       (onExportAsXhtml)="onSaveLayout()"
+      (onSaveDesign)="onSaveDesign()"
+      (onLoadDesign)="onLoadDesign()"
       (onOpen)="onOpenLayout()"
       (onClose)="onCloseLayout()"
       (onUndo)="onUndo()"
