Apply borders individually is possible.

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -17,7 +17,10 @@
               [style.padding]="getCellPaddingString(rowIndex,colIndex)"
               [style.text-align]="getCellHAlign(rowIndex,colIndex)"
               [style.vertical-align]="getCellVAlign(rowIndex,colIndex)"
-              [style.border]="getCellBorder(rowIndex,colIndex)"
+              [style.borderTop]="getCellBorderCss(rowIndex,colIndex,'top')"
+              [style.borderRight]="getCellBorderCss(rowIndex,colIndex,'right')"
+              [style.borderBottom]="getCellBorderCss(rowIndex,colIndex,'bottom')"
+              [style.borderLeft]="getCellBorderCss(rowIndex,colIndex,'left')"
               [style.font-style]="getCellFontStyle(rowIndex,colIndex)"
               [style.font-weight]="getCellFontWeight(rowIndex,colIndex)"
               [style.font-size]="getCellFontSize(rowIndex,colIndex)"
