--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
@@ -60,3 +60,35 @@
   color: @primary-foreground;
   border-color: @primary;
 }
+
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-item[data-value="calibri"]::before,
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-label[data-value="calibri"]::before {
+  content: 'Calibri';
+  font-family: 'Calibri', sans-serif;
+}
+
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-item[data-value="kix-barcode"]::before,
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-label[data-value="kix-barcode"]::before {
+  content: 'KIX Barcode';
+  font-family: 'KIX Barcode';
+}
+
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-item[data-value="roboto"]::before,
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-label[data-value="roboto"]::before {
+  content: 'Roboto';
+  font-family: 'Roboto', sans-serif;
+}
+
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-item[data-value="arial"]::before,
+:host ::ng-deep .ql-snow .ql-picker.ql-font .ql-picker-label[data-value="arial"]::before {
+  content: 'Arial';
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+:host ::ng-deep .ql-font-calibri {
+  font-family: 'Calibri', sans-serif;
+}
+
+:host ::ng-deep .ql-font-kix-barcode {
+  font-family: 'KIX Barcode';
+}
