--- a/fe-designer-dragdrop/src/app/layout/property-panel/property-panel.less
+++ b/fe-designer-dragdrop/src/app/layout/property-panel/property-panel.less
@@ -218,6 +218,18 @@
   z-index: @z-popover;
 }
 
+.subsection-header {
+  margin: 0;
+  padding: 6px 10px;
+  font-size: 11px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.4px;
+  color: #ffffff;
+  background-color: #41424C;
+  border-radius: @radius-sm;
+}
+
 .border-popover::before {
   content: '';
   position: absolute;
