--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
@@ -31,6 +31,8 @@
   align-items: center;
   justify-content: space-between;
   font-weight: 600;
+  cursor: move; // indicate draggability
+  user-select: none;
 }
 
 .close-btn {
